--- a/pom.xml
+++ b/pom.xml
@@ -77,5 +77,5 @@
       <id>nexusoss</id>
       <url>http://localhost:8081/repository/nexusmaven/</url>
     </snapshotRepository>
-  <distributionManagement>
+  </distributionManagement>
 </project>
